--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,10 +13,11 @@
 	<meta charset="UTF-8">
 
 	{% seo %}
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="theme-color" content="#157878">
-	<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-	<link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<meta name="theme-color" content="#157878" />
+	<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+	<link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}" />
+	<link href="{{ site.subscribe_rss }}" rel="alternate" title="{{site.title}}" type="application/atom+xml">
 </head>
 <body>
 	<a id="skip-to-content" href="#content">Skip to the content.</a>
@@ -24,6 +25,7 @@
 	<header class="page-header" role="banner">
 		<h1 class="project-name">{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
 		<h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
+		
 		<a href="{{ root_url }}/" class="btn">Home</a>
 		<a href="{{ root_url }}/blog" class="btn">Blog</a>
 		<a href="{{ root_url }}/documentation" class="btn">Documentation</a>
@@ -33,6 +35,9 @@
 		{% if site.show_downloads %}
 			<a href="{{ site.github.zip_url }}" class="btn">Download .zip</a>
 			<a href="{{ site.github.tar_url }}" class="btn">Download .tar.gz</a>
+		{% endif %}
+		{% if site.subscribe_rss %}
+			<a href="{{ site.subscribe_rss }}" rel="subscribe-rss" title="subscribe via RSS" class="btn">RSS</a>
 		{% endif %}
 	</header>
 
