--- a/_layouts/documentation.html
+++ b/_layouts/documentation.html
@@ -1,6 +1,5 @@
 ---
 layout: default
-release: 4.3
 ---
 
 <aside class="documentation-nav">
@@ -10,70 +9,70 @@ release: 4.3
 	</section>
 	<section>
 		<h3>4.3 Documentation (beta)</h3>
-		<a href="/documentation/{release}/">Getting Started Guide</a><br />
-		<a href="/documentation/{release}/developing-applications.html">Developing Applications Guide</a><br />
-		<a href="/documentation/{release}/using-aop-one.html">Using AOP/1</a><br />
-		<a href="/documentation/{release}/using-di-one.html">Using DI/1</a><br />
-		<a href="/documentation/{release}/using-subsystems.html">Using Subsystems</a><br />
-		<a href="/documentation/{release}/reference-manual.html">Reference Manual</a><br />
-		<a href="/documentation/{release}/changelog.html">Change Log</a><br />
+		<a href="/documentation/4.3/">Getting Started Guide</a><br />
+		<a href="/documentation/4.3/developing-applications/">Developing Applications Guide</a><br />
+		<a href="/documentation/4.3/using-aop-one/">Using AOP/1</a><br />
+		<a href="/documentation/4.3/using-di-one/">Using DI/1</a><br />
+		<a href="/documentation/4.3/using-subsystems/">Using Subsystems</a><br />
+		<a href="/documentation/4.3/reference-manual/">Reference Manual</a><br />
+		<a href="/documentation/4.3/changelog/">Change Log</a><br />
 	</section>
 	<section>
 		<h3>4.2 Documentation (Current Master)</h3>
 		<a href="/documentation/4.2/">Getting Started Guide</a><br />
-		<a href="/documentation/4.2/developing-applications.html">Developing Applications Guide</a><br />
-		<a href="/documentation/4.2/using-aop-one.html">Using AOP/1</a><br />
-		<a href="/documentation/4.2/using-di-one.html">Using DI/1</a><br />
-		<a href="/documentation/4.2/using-subsystems.html">Using Subsystems</a><br />
-		<a href="/documentation/4.2/reference-manual.html">Reference Manual</a><br />
-		<a href="/documentation/4.2/changelog.html">Change Log</a><br />
+		<a href="/documentation/4.2/developing-applications/">Developing Applications Guide</a><br />
+		<a href="/documentation/4.2/using-aop-one/">Using AOP/1</a><br />
+		<a href="/documentation/4.2/using-di-one/">Using DI/1</a><br />
+		<a href="/documentation/4.2/using-subsystems/">Using Subsystems</a><br />
+		<a href="/documentation/4.2/reference-manual/">Reference Manual</a><br />
+		<a href="/documentation/4.2/changelog/">Change Log</a><br />
 	</section>
 	<section>
 		<h3>4.1 Documentation</h3>
 		<a href="/documentation/4.1/">Getting Started Guide</a><br />
-		<a href="/documentation/4.1/developing-applications.html">Developing Applications Guide</a><br />
-		<a href="/documentation/4.1/using-aop-one.html">Using AOP/1</a><br />
-		<a href="/documentation/4.1/using-di-one.html">Using DI/1</a><br />
-		<a href="/documentation/4.1/using-subsystems.html">Using Subsystems</a><br />
-		<a href="/documentation/4.1/reference-manual.html">Reference Manual</a><br />
-		<a href="/documentation/4.1/changelog.html">Change Log</a><br />
+		<a href="/documentation/4.1/developing-applications/">Developing Applications Guide</a><br />
+		<a href="/documentation/4.1/using-aop-one/">Using AOP/1</a><br />
+		<a href="/documentation/4.1/using-di-one/">Using DI/1</a><br />
+		<a href="/documentation/4.1/using-subsystems/">Using Subsystems</a><br />
+		<a href="/documentation/4.1/reference-manual/">Reference Manual</a><br />
+		<a href="/documentation/4.1/changelog/">Change Log</a><br />
 	</section>
 	<section>
 		<h3>4.0 Documentation</h3>
 		<a href="/documentation/4.0/">Getting Started Guide</a><br />
-		<a href="/documentation/4.0/developing-applications.html">Developing Applications Guide</a><br />
-		<a href="/documentation/4.0/using-aop-one.html">Using AOP/1</a><br />
-		<a href="/documentation/4.0/using-di-one.html">Using DI/1</a><br />
-		<a href="/documentation/4.0/using-subsystems.html">Using Subsystems</a><br />
-		<a href="/documentation/4.0/reference-manual.html">Reference Manual</a><br />
-		<a href="/documentation/4.0/changelog.html">Change Log</a><br />
+		<a href="/documentation/4.0/developing-applications/">Developing Applications Guide</a><br />
+		<a href="/documentation/4.0/using-aop-one/">Using AOP/1</a><br />
+		<a href="/documentation/4.0/using-di-one/">Using DI/1</a><br />
+		<a href="/documentation/4.0/using-subsystems/">Using Subsystems</a><br />
+		<a href="/documentation/4.0/reference-manual/">Reference Manual</a><br />
+		<a href="/documentation/4.0/changelog/">Change Log</a><br />
 	</section>
 	<section>
 		<h3>3.5 Documentation</h3>
 		<a href="/documentation/3.5/">Getting Started Guide</a><br />
-		<a href="/documentation/3.5/cfml-and-clojure.html">CFML and Clojure</a><br />
-		<a href="/documentation/3.5/developing-applications.html">Developing Applications Guide</a><br />
-		<a href="/documentation/3.5/using-aop-one.html">Using AOP/1</a><br />
-		<a href="/documentation/3.5/using-di-one.html">Using DI/1</a><br />
-		<a href="/documentation/3.5/using-subsystems.html">Using Subsystems</a><br />
-		<a href="/documentation/3.5/reference-manual.html">Reference Manual</a><br />
+		<a href="/documentation/3.5/cfml-and-clojure/">CFML and Clojure</a><br />
+		<a href="/documentation/3.5/developing-applications/">Developing Applications Guide</a><br />
+		<a href="/documentation/3.5/using-aop-one/">Using AOP/1</a><br />
+		<a href="/documentation/3.5/using-di-one/">Using DI/1</a><br />
+		<a href="/documentation/3.5/using-subsystems/">Using Subsystems</a><br />
+		<a href="/documentation/3.5/reference-manual/">Reference Manual</a><br />
 	</section>
 	<section>
 		<h3>3.1 Documentation</h3>
 		<a href="/documentation/3.1/">Getting Started Guide</a><br />
-		<a href="/documentation/3.1/developing-applications.html">Developing Applications Guide</a><br />
-		<a href="/documentation/3.1/using-aop-one.html">Using AOP/1</a><br />
-		<a href="/documentation/3.1/using-di-one.html">Using DI/1</a><br />
-		<a href="/documentation/3.1/using-subsystems.html">Using Subsystems</a><br />
-		<a href="/documentation/3.1/reference-manual.html">Reference Manual</a><br />
+		<a href="/documentation/3.1/developing-applications/">Developing Applications Guide</a><br />
+		<a href="/documentation/3.1/using-aop-one/">Using AOP/1</a><br />
+		<a href="/documentation/3.1/using-di-one/">Using DI/1</a><br />
+		<a href="/documentation/3.1/using-subsystems/">Using Subsystems</a><br />
+		<a href="/documentation/3.1/reference-manual/">Reference Manual</a><br />
 	</section>
 	<section>
 		<h3>3.0 Documentation</h3>
 		<a href="/documentation/3.0/">Getting Started Guide</a><br />
-		<a href="/documentation/3.0/developing-applications.html">Developing Applications Guide</a><br />
-		<a href="/documentation/3.0/using-di-one.html">Using DI/1</a><br />
-		<a href="/documentation/3.0/using-subsystems.html">Using Subsystems</a><br />
-		<a href="/documentation/3.0/reference-manual.html">Reference Manual</a><br />
+		<a href="/documentation/3.0/developing-applications/">Developing Applications Guide</a><br />
+		<a href="/documentation/3.0/using-di-one/">Using DI/1</a><br />
+		<a href="/documentation/3.0/using-subsystems/">Using Subsystems</a><br />
+		<a href="/documentation/3.0/reference-manual/">Reference Manual</a><br />
 	</section>
 </aside>
 
